expected/main/core/bitdata/bitdata3a.err
ERROR: "actual/main/core/bitdata/bitdata3a.lc", line 2
bitdata CBOOL   = Ct [1]  | Cf [0]    -- invalid, not enough information
                  ^
Constraint Width of 1 = Width of Ct does not have a unique solution

ERROR: Aborting after previously reported error

